// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ThirdPartyLookupFormResult renders api data 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-test-form"
        id="standard-card-test-form"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-test-form-header"
              id="standard-card-test-form-header"
            >
              Test Form
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-test-form-content"
          data-testid="standard-card-test-form-content"
          id="standard-card-test-form-content"
        >
          <p>
            primary heading
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <pre>
                [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
              </pre>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult renders api data when no second field provided 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-label-9"
        id="standard-card-label-9"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-label-9-header"
              id="standard-card-label-9-header"
            >
              label 9
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-label-9-content"
          data-testid="standard-card-label-9-content"
          id="standard-card-label-9-content"
        >
          <p>
            pf heading 9
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <pre>
                [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
              </pre>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should display a blank when the response is blank 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-test-form"
        id="standard-card-test-form"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-test-form-header"
              id="standard-card-test-form-header"
            >
              Test Form
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-test-form-content"
          data-testid="standard-card-test-form-content"
          id="standard-card-test-form-content"
        >
          <p>
            primary heading
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-results"
            id="standard-card-results"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-results-header"
                  id="standard-card-results-header"
                >
                  Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-results-content"
              data-testid="standard-card-results-content"
              id="standard-card-results-content"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              >
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
                  data-testid="standard-card"
                  id="standard-card"
                  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
                >
                  <div
                    class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
                  >
                    <div
                      class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                    />
                  </div>
                  <div
                    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                    data-analyticsid="standard-card-content"
                    data-testid="standard-card-content"
                    id="standard-card-content"
                  >
                    No results found
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Search
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should display the secondary field when required 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-label-10"
        id="standard-card-label-10"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-label-10-header"
              id="standard-card-label-10-header"
            >
              label 10
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-label-10-content"
          data-testid="standard-card-label-10-content"
          id="standard-card-label-10-content"
        >
          <p>
            pf heading 10
             - 
            dummy UT
          </p>
          <p>
            sf heading 10
             - 
            123456789
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <pre>
                [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
              </pre>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should not display the secondary field if reportInOutput is not specifically turned on 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-label-8"
        id="standard-card-label-8"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-label-8-header"
              id="standard-card-label-8-header"
            >
              label 8
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-label-8-content"
          data-testid="standard-card-label-8-content"
          id="standard-card-label-8-content"
        >
          <p>
            PF 8
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <pre>
                [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
              </pre>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should renders with defaults 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-test-form"
        id="standard-card-test-form"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-test-form-header"
              id="standard-card-test-form-header"
            >
              Test Form
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-test-form-content"
          data-testid="standard-card-test-form-content"
          id="standard-card-test-form-content"
        >
          <p>
            primary heading
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              >
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
                  data-testid="standard-card"
                  id="standard-card"
                  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
                >
                  <div
                    class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
                  >
                    <div
                      class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                    />
                  </div>
                  <div
                    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                    data-analyticsid="standard-card-content"
                    data-testid="standard-card-content"
                    id="standard-card-content"
                  >
                    No test results found
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should show locale-defined message when no results 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-test-form"
        id="standard-card-test-form"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-test-form-header"
              id="standard-card-test-form-header"
            >
              Test Form
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-test-form-content"
          data-testid="standard-card-test-form-content"
          id="standard-card-test-form-content"
        >
          <p>
            primary heading
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              >
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
                  data-testid="standard-card"
                  id="standard-card"
                  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
                >
                  <div
                    class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
                  >
                    <div
                      class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
                    />
                  </div>
                  <div
                    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
                    data-analyticsid="standard-card-content"
                    data-testid="standard-card-content"
                    id="standard-card-content"
                  >
                    No test results found
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should use defaults when locale values are not provided 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-test-form"
        id="standard-card-test-form"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-test-form-header"
              id="standard-card-test-form-header"
            >
              Test Form
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-test-form-content"
          data-testid="standard-card-test-form-content"
          id="standard-card-test-form-content"
        >
          <p>
            primary heading
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-results"
            id="standard-card-results"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
                  data-testid="standard-card-results-header"
                  id="standard-card-results-header"
                >
                  Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              data-analyticsid="standard-card-results-content"
              data-testid="standard-card-results-content"
              id="standard-card-results-content"
            >
              <pre>
                [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
              </pre>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Search
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
